@@ -1,131 +1,140 @@
 package net.blancworks.figura;
 
-import com.google.gson.Gson;
-import com.google.gson.GsonBuilder;
-import net.blancworks.figura.access.FiguraTextAccess;
+import net.blancworks.figura.avatar.AvatarData;
+import net.blancworks.figura.avatar.AvatarDataManager;
+import net.blancworks.figura.avatar.EntityAvatarData;
+import net.blancworks.figura.avatar.LocalAvatarManager;
+import net.blancworks.figura.config.ConfigManager;
+import net.blancworks.figura.config.ConfigManager.Config;
+import net.blancworks.figura.config.ConfigManager.ConfigKeyBind;
+import net.blancworks.figura.gui.FiguraToast;
 import net.blancworks.figura.lua.FiguraLuaManager;
-import net.blancworks.figura.models.CustomModel;
-import net.blancworks.figura.models.CustomModelPart;
-import net.blancworks.figura.models.parsers.BlockbenchModelDeserializer;
-import net.blancworks.figura.network.FiguraNetworkManager;
+import net.blancworks.figura.lua.api.FiguraAPI;
+import net.blancworks.figura.lua.api.sound.FiguraSoundManager;
 import net.blancworks.figura.network.IFiguraNetwork;
 import net.blancworks.figura.network.NewFiguraNetworkManager;
 import net.blancworks.figura.trust.PlayerTrustManager;
 import net.fabricmc.api.ClientModInitializer;
 import net.fabricmc.fabric.api.client.event.lifecycle.v1.ClientLifecycleEvents;
 import net.fabricmc.fabric.api.client.event.lifecycle.v1.ClientTickEvents;
-import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderContext;
 import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderEvents;
 import net.fabricmc.fabric.api.resource.ResourceManagerHelper;
 import net.fabricmc.fabric.api.resource.SimpleSynchronousResourceReloadListener;
+import net.fabricmc.fabric.impl.client.keybinding.KeyBindingRegistryImpl;
 import net.fabricmc.loader.api.FabricLoader;
+import net.fabricmc.loader.api.SemanticVersion;
+import net.fabricmc.loader.api.Version;
+import net.fabricmc.loader.api.metadata.ModMetadata;
 import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.network.AbstractClientPlayerEntity;
-import net.minecraft.client.render.OverlayTexture;
-import net.minecraft.client.render.VertexConsumerProvider;
-import net.minecraft.client.render.entity.model.PlayerEntityModel;
-import net.minecraft.client.util.math.MatrixStack;
+import net.minecraft.client.util.InputUtil;
+import net.minecraft.nbt.NbtCompound;
+import net.minecraft.nbt.NbtIo;
 import net.minecraft.resource.ResourceManager;
 import net.minecraft.resource.ResourceType;
-import net.minecraft.text.LiteralText;
 import net.minecraft.text.Style;
 import net.minecraft.text.Text;
-import net.minecraft.util.Formatting;
+import net.minecraft.text.TranslatableText;
 import net.minecraft.util.Identifier;
+import net.minecraft.util.math.Vec3f;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.Nullable;
+import org.lwjgl.glfw.GLFW;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.URL;
+import java.net.URLConnection;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.WatchKey;
-import java.util.Arrays;
+import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
+import java.util.function.UnaryOperator;
 
 public class FiguraMod implements ClientModInitializer {
-
-    public static final Gson GSON = new GsonBuilder().registerTypeAdapter(CustomModel.class, new BlockbenchModelDeserializer())
-            .setPrettyPrinting().create();
-
     public static final Logger LOGGER = LogManager.getLogger();
 
     public static final Identifier FIGURA_FONT = new Identifier("figura", "default");
+    public static final UnaryOperator<Style> ACCENT_COLOR = FiguraMod::getAccentColor;
+    public static final Vec3f ACE_BLUE = new Vec3f(0.69f, 0.95f, 1f); //0xaff2ff
+    public static final Vec3f FRAN_PINK = new Vec3f(1f, 0.45f, 0.72f); //0xff72b7
+
+    public static final String MOD_VERSION = FabricLoader.getInstance().getModContainer("figura").get().getMetadata().getVersion().getFriendlyString();
+
+    public static final boolean IS_CHEESE = LocalDate.now().getDayOfMonth() == 1 && LocalDate.now().getMonthValue() == 4;
+    public static NbtCompound cheese;
+
+    public static final ConfigKeyBind ACTION_WHEEL_BUTTON = new ConfigKeyBind("figura.config.action_wheel_button", GLFW.GLFW_KEY_B, ConfigManager.MOD_NAME, Config.ACTION_WHEEL_BUTTON);
+    public static final ConfigKeyBind PLAYER_POPUP_BUTTON = new ConfigKeyBind("figura.config.player_popup_button", GLFW.GLFW_KEY_R, ConfigManager.MOD_NAME, Config.PLAYER_POPUP_BUTTON);
+    public static final ConfigKeyBind PANIC_BUTTON = new ConfigKeyBind("figura.config.panic_button", GLFW.GLFW_KEY_UNKNOWN, ConfigManager.MOD_NAME, Config.PANIC_BUTTON);
+
+    public static int ticksElapsed;
+
+    public static final String GRADLE_PROPERTIES_LINK = "https://raw.githubusercontent.com/Blancworks/Figura/1.18/gradle.properties";
+    public static String latestVersion;
+    public static int latestVersionStatus = 0;
 
     //Loading
 
     //This task is what's used to manage all loading requests in the whole mod.
     //If an asset is set to load, it will attach to this if it exists, or create a new one if it doesn't.
-    private static CompletableFuture globalLoadTask;
-
-    private PlayerDataManager dataManagerInstance;
+    private static CompletableFuture<?> globalLoadTask;
 
     public static IFiguraNetwork networkManager;
 
-    private static FiguraNetworkManager oldNetworkManager;
+    //private static FiguraNetworkManager oldNetworkManager;
     private static NewFiguraNetworkManager newNetworkManager;
 
-    //Used during rendering.
-    public static AbstractClientPlayerEntity currentPlayer;
-    public static PlayerData currentData;
-    public static VertexConsumerProvider vertexConsumerProvider;
-    public static float deltaTime;
-
-    private static final boolean USE_DEBUG_MODEL = true;
-    private static WatchKey watchKey;
-    private static Path path;
+    //script entry points
+    public static final List<FiguraAPI> CUSTOM_APIS = new ArrayList<>();
 
     //Methods
 
-    //Set current player.
-    //If there is a model loaded for the player, it'll be assigned here to the current model.
-    //Otherwise, sends the model to the request list.
-    public static void setRenderingData(AbstractClientPlayerEntity player, VertexConsumerProvider vertexConsumerProvider, PlayerEntityModel mdl, float dt) {
-        currentPlayer = player;
-        currentData = PlayerDataManager.getDataForPlayer(player.getUuid());
-        currentData.vanillaModel = mdl;
-        FiguraMod.vertexConsumerProvider = vertexConsumerProvider;
-        deltaTime = dt;
-    }
-
-    public static void clearRenderingData() {
-        currentPlayer = null;
-        currentData = null;
-        deltaTime = 0;
-    }
-
     @Override
     public void onInitializeClient() {
+        //load entrypoints
+        FabricLoader.getInstance().getEntrypointContainers("figura", FiguraAPI.class).forEach(entrypoint -> {
+            ModMetadata metadata = entrypoint.getProvider().getMetadata();
+            String modId = metadata.getId();
+            try {
+                CUSTOM_APIS.add(entrypoint.getEntrypoint());
+            } catch (Exception e) {
+                LOGGER.error("Failed to load entrypoint of mod {}", modId, e);
+            }
+        });
+
+        //initialise managers
+        ConfigManager.initialize();
         FiguraLuaManager.initialize();
         PlayerTrustManager.init();
-        Config.initialize();
+        LocalAvatarManager.init();
 
-        try {
-            SSLFixer.main();
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+        //set keybinds based on config
+        ACTION_WHEEL_BUTTON.setBoundKey(InputUtil.Type.KEYSYM.createFromCode((int) Config.ACTION_WHEEL_BUTTON.value));
+        PLAYER_POPUP_BUTTON.setBoundKey(InputUtil.Type.KEYSYM.createFromCode((int) Config.PLAYER_POPUP_BUTTON.value));
+        PANIC_BUTTON.setBoundKey(InputUtil.Type.KEYSYM.createFromCode((int) Config.PANIC_BUTTON.value));
+
+        KeyBindingRegistryImpl.registerKeyBinding(ACTION_WHEEL_BUTTON);
+        KeyBindingRegistryImpl.registerKeyBinding(PLAYER_POPUP_BUTTON);
+        KeyBindingRegistryImpl.registerKeyBinding(PANIC_BUTTON);
 
         //Set up network
-        oldNetworkManager = new FiguraNetworkManager();
         newNetworkManager = new NewFiguraNetworkManager();
-
-        if ((boolean) Config.entries.get("useNewNetwork").value) {
-            networkManager = newNetworkManager;
-        } else {
-            networkManager = oldNetworkManager;
-        }
+        networkManager = newNetworkManager;
 
         //Register fabric events
         ClientTickEvents.END_CLIENT_TICK.register(FiguraMod::ClientEndTick);
-        WorldRenderEvents.AFTER_ENTITIES.register(FiguraMod::renderFirstPersonWorldParts);
-        ClientLifecycleEvents.CLIENT_STOPPING.register((v) -> {
-            networkManager.onClose();
+        WorldRenderEvents.AFTER_ENTITIES.register(context -> {
+            AvatarData data = AvatarDataManager.localPlayer;
+            if (data != null && data.model != null && !context.camera().isThirdPerson())
+                data.model.renderFirstPersonWorldParts(context.matrixStack(), context.camera(), context.tickDelta());
         });
+        ClientLifecycleEvents.CLIENT_STOPPING.register((v) -> networkManager.onClose());
 
-        dataManagerInstance = new PlayerDataManager();
         ResourceManagerHelper.get(ResourceType.CLIENT_RESOURCES).registerReloadListener(new SimpleSynchronousResourceReloadListener() {
             @Override
             public Identifier getFabricId() {
@@ -133,58 +142,82 @@ public class FiguraMod implements ClientModInitializer {
             }
 
             @Override
-            public void apply(ResourceManager manager) {
-                PlayerDataManager.reloadAllTextures();
+            public void reload(ResourceManager manager) {
+                AvatarDataManager.reloadAssets();
+                EntityAvatarData.loadCemModels();
+                LocalAvatarManager.loadResourceAvatars(manager);
+
+                try {
+                    cheese = NbtIo.readCompressed(manager.getResource(new Identifier("figura", "cheese/cheese.moon")).getInputStream());
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
             }
         });
 
         getModContentDirectory();
+        getLatestModVersion();
     }
 
     //Client-side ticks.
     public static void ClientEndTick(MinecraftClient client) {
-        PlayerDataManager.tick();
+        try {
+            AvatarDataManager.tick();
+            FiguraSoundManager.tick();
 
-        if ((boolean) Config.entries.get("useNewNetwork").value) {
             networkManager = newNetworkManager;
-        } else {
-            networkManager = oldNetworkManager;
+
+            if (networkManager != null)
+                networkManager.tickNetwork();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        ticksElapsed++;
+    }
+
+    public static Path getModContentDirectory() {
+        String userPath = (String) Config.MODEL_FOLDER_PATH.value;
+        try {
+            Path p = userPath.isEmpty() ? getDefaultDirectory() : Path.of(userPath);
+            if (!Files.exists(p))
+                Files.createDirectories(p);
+
+            return p;
+        } catch (Exception e) {
+            e.printStackTrace();
         }
 
-        if (networkManager != null)
-            networkManager.tickNetwork();
+        return getDefaultDirectory();
     }
-    
-    public static Path getModContentDirectory() {
+
+    public static Path getDefaultDirectory() {
         Path p = FabricLoader.getInstance().getGameDir().normalize().resolve("figura");
         try {
-            Files.createDirectories(p);
+            if (!Files.exists(p))
+                Files.createDirectories(p);
         } catch (Exception e) {
             e.printStackTrace();
         }
         return p;
     }
 
-    public static CompletableFuture doTask(Runnable toRun) {
-        return doTask(toRun, null);
+    public static CompletableFuture<?> doTask(Runnable toRun) {
+        try {
+            return doTask(toRun, null);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
+        return null;
     }
 
-    public static CompletableFuture doTask(Runnable toRun, @Nullable Runnable onFinished) {
+    public static CompletableFuture<?> doTask(Runnable toRun, @Nullable Runnable onFinished) {
         //If the global load task doesn't exist, create it.
-        if (globalLoadTask == null || globalLoadTask.isDone()) {
-            globalLoadTask = CompletableFuture.runAsync(
-                    () -> {
-                        runTask(toRun, onFinished);
-                    }
-            );
-        } else {
-            //Otherwise, queue up next task.
-            globalLoadTask = globalLoadTask.thenRunAsync(
-                    () -> {
-                        runTask(toRun, onFinished);
-                    }
-            );
-        }
+        if (globalLoadTask == null || globalLoadTask.isDone())
+            globalLoadTask = CompletableFuture.runAsync(() -> runTask(toRun, onFinished));
+        //Otherwise, queue up next task.
+        else
+            globalLoadTask = globalLoadTask.thenRunAsync(() -> runTask(toRun, onFinished));
 
         return globalLoadTask;
     }
@@ -196,87 +229,63 @@ public class FiguraMod implements ClientModInitializer {
             onFinished.run();
     }
 
+    public static void sendToast(Object title, Object message) {
+        Text text = title instanceof Text t ? t : new TranslatableText(title.toString());
+        Text text2 = message instanceof Text m ? m : new TranslatableText(message.toString());
 
-    private static void renderFirstPersonWorldParts(WorldRenderContext context) {
-        try {
-            if (!context.camera().isThirdPerson()) {
-                PlayerData data = PlayerDataManager.localPlayer;
+        MinecraftClient.getInstance().getToastManager().clear();
+        MinecraftClient.getInstance().getToastManager().add(new FiguraToast(text, text2));
+    }
 
-                if (data != null && data.lastEntity != null) {
+    public static void getLatestModVersion() {
+        //no updates pls
+        if ((int) (Config.RELEASE_CHANNEL.value) == 2) {
+            latestVersionStatus = 0;
+            return;
+        }
 
-                    FiguraMod.currentData = data;
-
-                    context.matrixStack().push();
-                    context.matrixStack().translate(-context.camera().getPos().x, -context.camera().getPos().y, -context.camera().getPos().z);
-                    context.matrixStack().scale(-1, -1, 1);
-
-                    try {
-
-                        if (data.model != null) {
-                            int prevCount = data.model.leftToRender;
-                            data.model.leftToRender = Integer.MAX_VALUE - 100;
-
-                            if (data != null && data.model != null) {
-                                for (CustomModelPart part : data.model.worldParts) {
-                                    part.renderUsingAllTextures(data, context.matrixStack(), new MatrixStack(), FiguraMod.vertexConsumerProvider, MinecraftClient.getInstance().getEntityRenderDispatcher().getLight(data.lastEntity, context.tickDelta()), OverlayTexture.DEFAULT_UV, 1.0f);
-                                }
-                            }
-
-                            data.model.leftToRender = prevCount;
-                        }
-                    } catch (Exception e) {
-                        e.printStackTrace();
-                    }
-
-                    context.matrixStack().pop();
-
-                    FiguraMod.clearRenderingData();
+        doTask(() -> {
+            try {
+                StringBuilder output = new StringBuilder();
+                URLConnection connection = new URL(GRADLE_PROPERTIES_LINK).openConnection();
+                BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+                String line;
+                while((line = reader.readLine()) != null) {
+                    output.append(line).append("\n");
                 }
+                reader.close();
+                String versionFileContents = output.toString();
+                int versionPos = versionFileContents.indexOf("mod_version");
+                int nextLinePos = versionFileContents.indexOf("\n", versionPos);
+                latestVersion = versionFileContents.substring(versionPos, nextLinePos).replaceAll(" ", "").substring(12);
+
+                //process latest
+                SemanticVersion temp = SemanticVersion.parse(latestVersion);
+                if (temp.getPrereleaseKey().isPresent() && (int) (Config.RELEASE_CHANNEL.value) == 1)
+                    latestVersion = temp.getVersionComponent(0) + "." + temp.getVersionComponent(1) + "." + (temp.getVersionComponent(2) - 1);
+
+                SemanticVersion latest = SemanticVersion.parse(latestVersion);
+                SemanticVersion current = SemanticVersion.parse(MOD_VERSION);
+                latestVersionStatus = current.compareTo((Version) latest);
+            } catch (Exception e) {
+                latestVersionStatus = 0;
+                e.printStackTrace();
             }
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
+        });
     }
 
-    //get nameplate badges
-    public static Text getBadges(UUID uuid) {
-        PlayerData currentData = PlayerDataManager.getDataForPlayer(uuid);
-
-        Identifier font;
-        if ((boolean) Config.entries.get("nameTagIcon").value)
-            font = FiguraMod.FIGURA_FONT;
-        else
-            font = Style.DEFAULT_FONT_ID;
-
-        LiteralText badges = new LiteralText(" ");
-        badges.setStyle(Style.EMPTY
-                .withExclusiveFormatting(Formatting.WHITE)
-                .withFont(font)
-        );
-
-        if (currentData != null && currentData.model != null) {
-            if (PlayerDataManager.getDataForPlayer(uuid).model.getRenderComplexity() < currentData.getTrustContainer().getFloatSetting(PlayerTrustManager.MAX_COMPLEXITY_ID)) {
-                badges.append(new LiteralText("△"));
-            } else {
-                badges.append(new LiteralText("▲"));
-            }
-        }
-
-        if (FiguraMod.special.contains(uuid))
-            badges.append(new LiteralText("✭"));
-
-        if (badges.getString().equals(" "))
-            ((FiguraTextAccess) badges).figura$setText("");
-
-        ((FiguraTextAccess) badges).figura$setFigura(true);
-
-        return badges;
+    public static Style getAccentColor(Style style) {
+        return style.withColor((int) Config.ACCENT_COLOR.value);
     }
 
-    public final static List<UUID> special = Arrays.asList(
+    public final static List<UUID> VIP = List.of(
             UUID.fromString("aa0e3391-e497-4e8e-8afe-b69dfaa46afa"), //salad
             UUID.fromString("da53c608-d17c-4759-94fe-a0317ed63876"), //zandra
             UUID.fromString("66a6c5c4-963b-4b73-a0d9-162faedd8b7f"), //fran
-            UUID.fromString("45361fcf-f188-46de-ae96-43d89afd6658")  //monty58
+            UUID.fromString("45361fcf-f188-46de-ae96-43d89afd6658"), //money
+            UUID.fromString("d47ce8af-b942-47de-8790-f602241531e3"), //omo
+            UUID.fromString("0d04770a-9482-4a39-8011-fcbb7c99b8e1"), //lily
+            UUID.fromString("10c4a29c-78fd-428c-bf51-f70b93e2ab45"), //rambles
+            UUID.fromString("50de3aff-e8ef-4d55-9092-f96b7b40de7a")  //devnull
     );
 }
